--- a/localisation/reythornia_focus_l_english.yml
+++ b/localisation/reythornia_focus_l_english.yml
@@ -37,3 +37,24 @@
 
   REY_cruzada_contra_separatistas:0 "Crusade Against the Separatists"
   REY_cruzada_contra_separatistas_desc:0 ""
+
+  REY_desarollar_la_industria:0 "Develop the Industry"
+  REY_desarollar_la_industria_desc:0 ""
+
+  REY_carreteras_nacionales:0 "National Roads"
+  REY_carreteras_nacionales_desc:0 ""
+
+  REY_capital_extranjero:0 "Foreign Capital"
+  REY_capital_extranjero_desc:0 ""
+
+  REY_explotar_los_recursos:0 "Exploit the Resources"
+  REY_explotar_los_recursos_desc:0 ""
+
+  REY_manufacturar_armamento:0 "Armament Manufacturing"
+  REY_manufacturar_armamento_desc:0 ""
+
+  REY_ejercito_blindado:0 "Armored Forces"
+  REY_ejercito_blindado_desc:0 ""
+
+  REY_ingenieros_de_asalto:0 "Assault Engineers"
+  REY_ingenieros_de_asalto_desc:0 ""
