--- a/localisation/reythornia_focus_l_spanish.yml
+++ b/localisation/reythornia_focus_l_spanish.yml
@@ -39,22 +39,22 @@
   REY_cruzada_contra_separatistas_desc:0 "Debemos erradicar a los separatistas comunistas, anarquistas y liberales para estabilizar al país."
 
   REY_desarollar_la_industria:0 "Desarollar la Industria"
-  REY_desarollar_la_industria_desc:0 ""
+  REY_desarollar_la_industria_desc:0 "Buena parte del legado industrial del viejo imperio está ahora en nuestras manos, debemos sacarle el mayor provecho posible."
 
   REY_carreteras_nacionales:0 "Carreteras Nacionales"
-  REY_carreteras_nacionales_desc:0 ""
+  REY_carreteras_nacionales_desc:0 "Movernos por las montañas es complicado, debemos hacer que nuestro país tenga la mejor infraestructura."
 
   REY_capital_extranjero:0 "Capital Extranjero"
-  REY_capital_extranjero_desc:0 ""
+  REY_capital_extranjero_desc:0 "Tenemos que invitar a los países vecinos a que inviertan en nuestro país, de este modo conseguiremos un desarrollo excepcional."
 
   REY_explotar_los_recursos:0 "Explotar los Recursos"
-  REY_explotar_los_recursos_desc:0 ""
+  REY_explotar_los_recursos_desc:0 "No necesitamos recursos de otros países, podemos auto-abastecernos sin problema alguno."
 
   REY_manufacturar_armamento:0 "Manufacturar Armamento"
-  REY_manufacturar_armamento_desc:0 ""
+  REY_manufacturar_armamento_desc:0 "Produciremos Rifles de calidad y en cantidad, como en los viejos tiempos."
 
   REY_ejercito_blindado:0 "Ejército Blindado"
-  REY_ejercito_blindado_desc:0 ""
+  REY_ejercito_blindado_desc:0 "Nuestros enemigos tienen bastante tecnología y no debemos quedarnos atrás, tenemos que desarrollar tanques para afrontar cualquier amenaza."
 
   REY_ingenieros_de_asalto:0 "Ingenieros de Asalto"
-  REY_ingenieros_de_asalto_desc:0 ""
+  REY_ingenieros_de_asalto_desc:0 "Ingenieros y zapadores de asalto, equiparemos compañias completas para un mejor desempeño en el campo de batalla."
