--- a/localisation/countries_l_spanish.yml
+++ b/localisation/countries_l_spanish.yml
@@ -11,6 +11,7 @@
  REY_democratic_ADJ:0 "de Reythornia"
  REY_neutrality_ADJ:0 "del Reino de Reythornia"
  REY_communism_ADJ:0 "de la República Democrática de Reythornia"
+ REY_Sin_Gobierno:0 "Sin Gobierno"
  GER_fascism:0 "Tercer Reich"
  GER_fascism_DEF:0 "El Reich Alemán"
  GER_democratic:0 "República Federal Alemana"
