--- a/localisation/reythornia_focus_l_spanish.yml
+++ b/localisation/reythornia_focus_l_spanish.yml
@@ -38,7 +38,7 @@
   REY_cruzada_contra_separatistas:0 "Cruzada contra los Separatistas"
   REY_cruzada_contra_separatistas_desc:0 "Debemos erradicar a los separatistas comunistas, anarquistas y liberales para estabilizar al país."
 
-  REY_desarrollar_la_industria:0 "desarrollar la Industria"
+  REY_desarrollar_la_industria:0 "Desarrollar la Industria"
   REY_desarrollar_la_industria_desc:0 "Buena parte del legado industrial del viejo imperio está ahora en nuestras manos, debemos sacarle el mayor provecho posible."
 
   REY_carreteras_nacionales:0 "Carreteras Nacionales"
