--- a/localisation/reythornia_focus_l_english.yml
+++ b/localisation/reythornia_focus_l_english.yml
@@ -38,8 +38,8 @@
   REY_cruzada_contra_separatistas:0 "Crusade Against the Separatists"
   REY_cruzada_contra_separatistas_desc:0 ""
 
-  REY_desarro_industrial:0 "Develop the Industry"
-  REY_desarro_industrial_desc:0 ""
+  REY_desarrollo_industrial:0 "Develop the Industry"
+  REY_desarrollo_industrial_desc:0 ""
 
   REY_carreteras_nacionales:0 "National Roads"
   REY_carreteras_nacionales_desc:0 ""
