--- a/localisation/reythornia_focus_l_spanish.yml
+++ b/localisation/reythornia_focus_l_spanish.yml
@@ -38,8 +38,8 @@
   REY_cruzada_contra_separatistas:0 "Cruzada contra los Separatistas"
   REY_cruzada_contra_separatistas_desc:0 "Debemos erradicar a los separatistas comunistas, anarquistas y liberales para estabilizar al país."
 
-  REY_desarro_industrial:0 "Desarrollar la Industria"
-  REY_desarro_industrial_desc:0 "Buena parte del legado industrial del viejo imperio está ahora en nuestras manos, debemos sacarle el mayor provecho posible."
+  REY_desarrollo_industrial:0 "Desarrollar la Industria"
+  REY_desarrollo_industrial_desc:0 "Buena parte del legado industrial del viejo imperio está ahora en nuestras manos, debemos sacarle el mayor provecho posible."
 
   REY_carreteras_nacionales:0 "Carreteras Nacionales"
   REY_carreteras_nacionales_desc:0 "Movernos por las montañas es complicado, debemos hacer que nuestro país tenga la mejor infraestructura."
